<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6D4FF"
    tools:context=".settings.createAccount">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_btn"
        android:padding="5dp"
        android:text="CREATE ACCOUNT"
        android:textColor="@color/bottle_green"
        android:textSize="20dp"
        android:textStyle="bold"
        android:fontFamily="@font/americantypewriter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />
    <Button
        android:id="@+id/backButton"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="-2sp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/americantypewriter"
        android:text="@string/back"
        android:textColor="@color/myrtle_green"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="336dp"
        android:layout_height="365dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419">

        <EditText
            android:id="@+id/createAcc_getEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="Email"
            android:fontFamily="@font/americantypewriter"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/createAcc_getPW"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="Password"
            android:fontFamily="@font/americantypewriter"
            android:textColor="@color/white"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/createAcc_getFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="First Name"
            android:fontFamily="@font/americantypewriter"
            android:textColor="@color/white"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/createAcc_getLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="Last Name"
            android:fontFamily="@font/americantypewriter"
            android:textColor="@color/white"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/americantypewriter"
            android:text="Select role:"
            android:textColor="@color/myrtle_green"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/role_spinner"
            android:layout_width="match_parent"
            android:fontFamily="@font/americantypewriter"
            android:layout_height="50dp" />

    </LinearLayout>

    <Button
        android:id="@+id/create_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

</androidx.constraintlayout.widget.ConstraintLayout>