<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6D4FF"
    tools:context=".login.loginActivity">


    <EditText
        android:id="@+id/editTextPW"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:width="300dp"
        android:ems="10"
        android:fontFamily="@font/americantypewriter"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/bottle_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:width="300dp"
        android:ems="10"
        android:fontFamily="@font/americantypewriter"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/bottle_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />

    <TextView
        android:id="@+id/forgotPWText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="forgotPassword"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="Forgot password?"
        android:textColor="@color/bottle_green"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/rhythm"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextPW"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="229dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPWText">



        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="9dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/google_icon2" />
    </com.google.android.gms.common.SignInButton>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="165dp"
        android:layout_height="53dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="196dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/facebook_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>