<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myrtle_green"
    tools:context="settings.settingsActivity">


    <Button
        android:id="@+id/backButton"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="-2sp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/americantypewriter"
        android:text="@string/back"
        android:textStyle="bold"
        android:textColor="@color/myrtle_green"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="227dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101">

        <TextView
            android:id="@+id/infoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Account Info:"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/curUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="TextView"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/createAccBut"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/rhythm"
            android:fontFamily="@font/americantypewriter"
            android:onClick="editAccount"
            android:text="Edit Account"
            android:textColor="@color/lavender_blue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adminLayout"
        android:layout_width="0dp"
        android:layout_height="341dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712">


        <TextView
            android:id="@+id/admin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Admin Settings:"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button

            android:id="@+id/editUsersBut"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/rhythm"
            android:fontFamily="@font/americantypewriter"
            android:onClick="editUsers"
            android:text="Edit Users"
            android:textColor="@color/lavender_blue" />

        <Button
            android:id="@+id/editAccBut"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/rhythm"
            android:fontFamily="@font/americantypewriter"
            android:onClick="createAccount"
            android:text="Create Account"
            android:textColor="@color/lavender_blue" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>